// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorDropdown component disables hide button if only one editor open 1`] = `
Array [
  <Blueprint3.MenuItem
    disabled={true}
    icon="eye-open"
    id="main.js"
    multiline={false}
    onClick={[Function]}
    popoverProps={Object {}}
    shouldDismissPopover={true}
    text="Main Process (main.js)"
  />,
  <React.Fragment>
    <Blueprint3.MenuDivider />
    <Blueprint3.MenuItem
      disabled={false}
      icon="plus"
      multiline={false}
      onClick={[Function]}
      popoverProps={Object {}}
      shouldDismissPopover={true}
      text="Add Editor"
    />
  </React.Fragment>,
  <React.Fragment>
    <Blueprint3.MenuDivider />
    <Blueprint3.MenuItem
      disabled={false}
      icon="grid-view"
      multiline={false}
      onClick={[Function]}
      popoverProps={Object {}}
      shouldDismissPopover={true}
      text="Reset Layout"
    />
  </React.Fragment>,
]
`;

exports[`EditorDropdown component renders 1`] = `
<Fragment>
  <Blueprint3.Popover
    boundary="scrollParent"
    captureDismiss={false}
    content={
      <Blueprint3.Menu>
        <Blueprint3.MenuItem
          disabled={true}
          icon="eye-open"
          id="main.js"
          multiline={false}
          onClick={[Function]}
          popoverProps={Object {}}
          shouldDismissPopover={true}
          text="Main Process (main.js)"
        />
        <React.Fragment>
          <Blueprint3.MenuDivider />
          <Blueprint3.MenuItem
            disabled={false}
            icon="plus"
            multiline={false}
            onClick={[Function]}
            popoverProps={Object {}}
            shouldDismissPopover={true}
            text="Add Editor"
          />
        </React.Fragment>
        <React.Fragment>
          <Blueprint3.MenuDivider />
          <Blueprint3.MenuItem
            disabled={false}
            icon="grid-view"
            multiline={false}
            onClick={[Function]}
            popoverProps={Object {}}
            shouldDismissPopover={true}
            text="Reset Layout"
          />
        </React.Fragment>
      </Blueprint3.Menu>
    }
    defaultIsOpen={false}
    disabled={false}
    fill={false}
    hasBackdrop={false}
    hoverCloseDelay={300}
    hoverOpenDelay={150}
    inheritDarkTheme={true}
    interactionKind="click"
    minimal={false}
    modifiers={Object {}}
    openOnTargetFocus={true}
    position="bottom"
    targetTagName="span"
    transitionDuration={300}
    usePortal={true}
    wrapperTagName="span"
  >
    <Blueprint3.Button
      icon="applications"
      text="Editors"
    />
  </Blueprint3.Popover>
</Fragment>
`;
